--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %} 
 {% block content %}
-    <h1>This is stories</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">BagiCerita</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="navbar-nav ml-auto">
+                    <button type="button" class="btn btn-link">Login</button>
+                    <button type="button" class="btn btn-link">Register</button>
+                </div>
+            </div>
+    </nav>
 {% endblock %}
 
 {% block title %}
