tab and search form done

--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -12,6 +12,41 @@
                 </div>
             </div>
     </nav>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="card" style="width: 100%">
+                <div class="card-header">
+                    <div class="row">
+                       <div class="col">
+                            <ul class="nav nav-tabs card-header-tabs">
+                                <li class="nav-item">
+                                <a class="nav-link active" aria-current="true" href="#">Stories</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="#">Popular</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="#">Best</a>
+                                </li>
+                                <li class="nav-item">
+                                <a class="nav-link" href="#">Featured</a>
+                                </li>
+                            </ul>
+                       </div>
+                       <div class="col">
+                            <form class="form-inline">
+                                <input style="width:70%;display: inline-block" class="form-control mr-2" type="search" placeholder="Cari cerita" aria-label="Search">
+                                <button class="btn btn-outline-primary" type="submit">Pencarian</button>
+                            </form>
+                       </div> 
+                    </div>
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">All Stories</h5>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block title %}
