in the middle of making story-box

--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -35,14 +35,34 @@
                        </div>
                        <div class="col">
                             <form class="form-inline">
-                                <input style="width:70%;display: inline-block" class="form-control mr-2" type="search" placeholder="Cari cerita" aria-label="Search">
+                                <input style="width:70%;display: inline-block" class="form-control mr-2" type="search" placeholder="Cari berdasarkan judul" aria-label="Search">
                                 <button class="btn btn-outline-primary" type="submit">Pencarian</button>
                             </form>
                        </div> 
                     </div>
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">All Stories</h5>
+                    <h3 class="card-title">All Stories</h3>
+                    <div style="box-sizing:border-box" class="story-box mb-3">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div style="background-color: green;padding: 10px 15px" class="score-box mr-2">
+                                    <div style="font-size: 35px;color: white;" class="text-center mb-0">18</div>
+                                    <div style="font-size: 10px;color: white;" class="text-center">Points</div>
+                                </div>
+                                <div class="info">
+                                    <h5 class="mb-0">Judul Cerita</h5>
+                                    <span style="display: block;font-size: 0.9em;" class="font-weight-light">by Andika on 2020-03-06</span>
+                                    <span class="font-weight-light" style="display: block;font-size: 0.9em;">Tags: Cerita | Cerita Pendek | Romance | Sastra</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="story-box mb-2">
+                        <h5 class="mb-0">Judul Cerita</h5>
+                        <span style="display: block;font-size: 0.9em;" class="font-weight-light">by Andika on 2020-03-06</span>
+                        <span class="font-weight-light" style="display: block;font-size: 0.9em;">Tags: Cerita | Cerita Pendek | Romance | Sastra</span>
+                    </div>
                 </div>
             </div>
         </div>
