stories page done, story-box and its css done

--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -43,25 +43,20 @@
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">All Stories</h3>
-                    <div style="box-sizing:border-box" class="story-box mb-3">
+                    <div class="story-box mb-3">
                         <div class="container-fluid">
                             <div class="row">
-                                <div style="background-color: green;padding: 10px 15px" class="score-box mr-2">
-                                    <div style="font-size: 35px;color: white;" class="text-center mb-0">18</div>
-                                    <div style="font-size: 10px;color: white;" class="text-center">Points</div>
+                                <div class="score-box mr-2">
+                                    <div class="points-number text-center mb-0">18</div>
+                                    <div class="points-text text-center">Points</div>
                                 </div>
                                 <div class="info">
-                                    <h5 class="mb-0">Judul Cerita</h5>
-                                    <span style="display: block;font-size: 0.9em;" class="font-weight-light">by Andika on 2020-03-06</span>
-                                    <span class="font-weight-light" style="display: block;font-size: 0.9em;">Tags: Cerita | Cerita Pendek | Romance | Sastra</span>
+                                    <h5 class="mb-0"><a href="google.com">Halo-halo Bandung</a></h5>
+                                    <span class="text font-weight-light">(3200 kata) by <a href="youtube.com">Andika</a> on 2020-03-06</span>
+                                    <span class="text font-weight-light">Tags: <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a> 
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="story-box mb-2">
-                        <h5 class="mb-0">Judul Cerita</h5>
-                        <span style="display: block;font-size: 0.9em;" class="font-weight-light">by Andika on 2020-03-06</span>
-                        <span class="font-weight-light" style="display: block;font-size: 0.9em;">Tags: Cerita | Cerita Pendek | Romance | Sastra</span>
                     </div>
                 </div>
             </div>
