--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,12 @@
     color: blue;
 } */
 
+/* @media all and (max-width: 990px){
+    .form-inline{
+        display: block;
+    }
+} */
+
 .score-box{
     /* background-color: #0b6623; */
     background-color: #005CBF;
@@ -17,11 +23,33 @@
     font-size: 10px;
 }
 
+.story-box{
+    width: 100%;
+    display: flex;
+}
+
+.story-box .score-box{
+    max-height: 90px;
+}
+
 .story-box .info {
-    width: 90%;
+    /* width: 90%; */
 }
 
 .story-box .info .text{
     display: block;
     font-size: 0.9em;
 }
+
+.story-box .info .text.tags{
+    /* width: 60%; */
+
+}
+
+.searchbar {
+    width: 70% !important;
+}
+
+/* .stories-card-header{
+
+} */
