--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -1,17 +1,6 @@
 {% extends 'base.html' %} 
 {% block content %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">BagiCerita</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <div class="navbar-nav ml-auto">
-                    <button type="button" class="btn btn-link">Login</button>
-                    <button type="button" class="btn btn-link">Register</button>
-                </div>
-            </div>
-    </nav>
+    {% include 'navbar.html' %}
     <div class="container">
         <div class="row mt-5">
             <div class="card" style="width: 100%">
@@ -63,5 +52,13 @@
 {% endblock %}
 
 {% block title %}
-	Stories
+    {% if page == 'stories' %} 
+        Stories 
+    {% elif page == 'popular' %}
+        Popular
+    {% elif page == 'best' %}
+        Best
+    {% elif page == 'featured' %}
+        Featured
+    {% endif %}
 {% endblock %}
