basic comment and reply ui done

--- a/templates/story/stories.html
+++ b/templates/story/stories.html
@@ -39,10 +39,11 @@
                         </div>
                         <div class="info">
                             <h5 class="mb-0"><a href="google.com">Halo-halo Bandung</a></h5>
-                            <span class="text font-weight-light">(3200 kata) by <a href="youtube.com">Andika</a> on 2020-03-06</span>
-                            <span class="text tags font-weight-light">Tags: <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
+                            <span class="text-story-info text font-weight-light">(3200 kata) by <a href="youtube.com">Andika</a> on 2020-03-06</span>
+                            <span class="text-story-info text tags font-weight-light">Tags: <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
                                 | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a> 
                                 | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
+                            </span>
                         </div>
                     </div>
                 </div>
