--- a/static/style.css
+++ b/static/style.css
@@ -1,13 +1,3 @@
-/* h3{
-    color: blue;
-} */
-
-/* @media all and (max-width: 990px){
-    .form-inline{
-        display: block;
-    }
-} */
-
 .score-box{
     /* background-color: #0b6623; */
     background-color: #005CBF;
@@ -36,20 +26,32 @@
     /* width: 90%; */
 }
 
-.story-box .info .text{
+/* .story-box .info .text{
     display: block;
     font-size: 0.9em;
-}
-
-.story-box .info .text.tags{
-    /* width: 60%; */
-
+} */
+.text-story-info{
+    display: block !important;
+    font-size: 0.9em;
 }
 
 .searchbar {
     width: 70% !important;
 }
 
-/* .stories-card-header{
+.comment-list{
+    width: 90%;
+}
 
-} */
+
+.comment .user{
+    display: inline;
+}
+
+.comment .login-to-comment{
+    text-align: right;
+}
+
+.comment .date{
+    font-size: 0.9em;
+}
