--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -1,7 +1,68 @@
 {% extends 'base.html' %} 
 {% block content %}
-    <h1>This is individual story page</h1>
-    <p>Id: {{id}}</p>
+    {% include 'navbar.html' %}
+    <!-- <h1>This is individual story page</h1>
+    <p>Id: {{id}}</p> -->
+    <div class="container">
+        <div class="row mt-5">
+            <div class="card" style="width: 100%">
+                <div class="card-body">
+                    <a href="/stories">Home</a>
+                    <div class="story">
+                        <div class="story-info mb-5">
+                            <h3 class="card-title">Judul Cerita di Sini</h3>
+                            <span class="text-story-info font-weight-light">(3200 kata) by <a href="youtube.com">Andika</a> on 2020-03-06</span>
+                            <span class="text-story-info tags font-weight-light">Tags: <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
+                                <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a> 
+                                | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
+                            </span>
+                        </div>
+                        <div class="story-content">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi explicabo consequatur eos corporis fuga possimus provident itaque veniam voluptatem esse hic necessitatibus ratione quos consequuntur unde similique blanditiis, alias adipisci ea, saepe cumque libero animi. Nulla officia in accusantium ipsa eaque illum laborum consequuntur, provident porro quod animi tempora fugiat. Reprehenderit, minus, eos vel molestias possimus ducimus eaque quasi culpa fugiat sed repellendus dolorem tempore omnis commodi pariatur neque mollitia. Earum impedit sed eligendi? Expedita doloribus dicta velit sunt facere.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet qui eius voluptatem similique voluptatum dolores minus praesentium molestias esse soluta sunt reprehenderit saepe, eveniet assumenda porro harum! Dolor unde laudantium obcaecati, esse ex quidem est veritatis voluptatibus accusamus quia magnam quod minus repellat, mollitia tempore? Consequuntur praesentium beatae, quae nostrum ab eaque quam neque vitae ipsum delectus nisi illum dignissimos repudiandae fuga maxime rem maiores! Aut pariatur placeat iure ab. Atque quam voluptate ratione perferendis, possimus asperiores vero. Nesciunt fugiat iste eveniet nulla. Inventore vel optio nihil eos, vitae hic, quibusdam tenetur qui impedit voluptates sint fugit rerum unde? Eos ducimus est tenetur dicta. Harum quisquam iure porro, consequatur qui cum tempora vel earum eius ratione sed vero nisi beatae dignissimos adipisci rerum quam error facere quaerat temporibus necessitatibus. Itaque praesentium iure quia iste delectus aut doloremque. Veniam esse explicabo quis modi id. Veniam, nostrum et dolore laborum consectetur illum. Illo minus minima ducimus, unde pariatur quasi perferendis praesentium nemo, accusamus, quis neque? Voluptate id, officiis adipisci provident a cumque beatae sunt voluptatem quis, error et, rem eos sint expedita quam accusantium eaque consectetur aliquam exercitationem maiores distinctio ea vitae? Enim ad architecto unde hic possimus maxime eveniet itaque voluptatum?</p>
+                        </div>
+                    </div>
+                    <div class="comment">
+                        <h4 class="card-title">Komentar</h4>
+                        <div class="comment-list">
+                            <div class="comment mb-2">
+                                <h6 class="user font-weight-bold">Jihan</h6>
+                                <span class="date font-weight-light">(26-08-2020)</span>
+                                <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nisi cum eum neque necessitatibus tempora magnam assumenda ratione odio nemo!</p>
+                                <div class="login-to-comment">
+                                    <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-link">Login to comment</button>
+                                </div>
+                                <div class="ml-5 comment mb-2">
+                                    <h6 class="user font-weight-bold">Jihan</h6>
+                                    <span class="date font-weight-light">(26-08-2020)</span>
+                                    <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nisi cum eum neque necessitatibus tempora magnam assumenda ratione odio nemo!</p>
+                                    <div class="login-to-comment">
+                                        <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-link">Login to comment</button>
+                                    </div>
+                                    <div class="ml-5 comment mb-2">
+                                        <h6 class="user font-weight-bold">Jihan</h6>
+                                        <span class="date font-weight-light">(26-08-2020)</span>
+                                        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nisi cum eum neque necessitatibus tempora magnam assumenda ratione odio nemo!</p>
+                                        <div class="login-to-comment">
+                                            <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-link">Login to comment</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="ml-5 comment mb-2">
+                                    <h6 class="user font-weight-bold">Jihan</h6>
+                                    <span class="date font-weight-light">(26-08-2020)</span>
+                                    <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nisi cum eum neque necessitatibus tempora magnam assumenda ratione odio nemo!</p>
+                                    <div class="login-to-comment">
+                                        <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-link">Login to comment</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block title %}
