some commit on story story.html

--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -52,6 +52,7 @@
                             <div class="login-to-comment">
                                 <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-link">Login to comment</button>
                             </div>
+                            <!-- the replies live here-->
                             <div class="ml-5 comment mb-2">
                                 <h6 class="user font-weight-bold">Jihan</h6>
                                 <span class="date font-weight-light">(26-08-2020)</span>
