--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,8 +5,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="navbar-nav ml-auto">
+              <!-- if guest -->
                 <button type="button" data-bs-toggle="modal" data-bs-target="#loginModal" class="btn btn-link">Login</button>
                 <button type="button" data-bs-toggle="modal" data-bs-target="#registerModal" class="btn btn-link">Register</button>
+              <!-- if user / logged in -->
+                <!-- <a href="#" class="btn btn-link">Andika</a>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#registerModal" class="btn btn-link">Posting Cerita</button>
+                <button type="button" data-bs-toggle="modal" data-bs-target="#registerModal" class="btn btn-link">Logout</button> -->
             </div>
         </div>
 </nav>  
