--- a/templates/story/story.html
+++ b/templates/story/story.html
@@ -15,6 +15,8 @@
                                 <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a> 
                                 | <a href="twitter.com">Cerita</a> | <a href="twitter.com">Cerita Pendek</a> | <a href="twitter.com">Detektif</a>
                             </span>
+                            <span class="text-story-info button-story font-weight-light"><a href="#">Edit Cerita</a></span>
+                            <span class="text-story-info button-story font-weight-light"><a href="#">Hapus Cerita</a></span>
                         </div>
                         <div class="story-content">
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi explicabo consequatur eos corporis fuga possimus provident itaque veniam voluptatem esse hic necessitatibus ratione quos consequuntur unde similique blanditiis, alias adipisci ea, saepe cumque libero animi. Nulla officia in accusantium ipsa eaque illum laborum consequuntur, provident porro quod animi tempora fugiat. Reprehenderit, minus, eos vel molestias possimus ducimus eaque quasi culpa fugiat sed repellendus dolorem tempore omnis commodi pariatur neque mollitia. Earum impedit sed eligendi? Expedita doloribus dicta velit sunt facere.</p>
