--- a/templates/user/edit_user_profile.html
+++ b/templates/user/edit_user_profile.html
@@ -1,9 +1,46 @@
 {% extends 'base.html' %} 
+{% load story_tags %}
 {% block content %}
-    <h1>This is edit user profile page</h1>
-    <p>User id: {{id}}</p>
+    {% include 'navbar.html' %}
+    <div class="container">
+        <div class="row mt-5">
+            <div class="card" style="width: 100%">
+                <div class="card-body">
+                    <h3 class="card-title">Edit Profil</h3>
+                    <form>
+                        <div class="form-group">
+                          <label for="nama-lengkap">Nama Lengkap</label>
+                          <input type="text" name="nama-lengkap" class="form-control" id="nama-lengkap"/>
+                        </div>
+                        <div class="form-group">
+                          <label for="tanggal-lahir">Tanggal Lahir</label>
+                          <input type="date" class="form-control" id="tanggal-lahir" name="tanggal-lahir"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="gender">Gender</label>
+                            <select class="form-control" id="gender" name="gender">
+                                <option value="laki-laki">Laki-laki</option>
+                                <option value="perempuan">Perempuan</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="kota">Kota</label>
+                            <input type="text" name="nama-lengkap" class="form-control" id="nama-lengkap"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="tentang-saya">Tentang Saya</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
+                        </div>    
+                        <div class="form-group" style="text-align: right;">
+                            <button type="submit" class="btn btn-primary">Simpan</button>
+                          </div>
+                      </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block title %}
-	Edit User profile
+	Edit Profil
 {% endblock %}
